--- a/src/components/wishListButton/wishListButton.css
+++ b/src/components/wishListButton/wishListButton.css
@@ -1,9 +1,30 @@
 .card-add-to-wishlist {
-    height: 2rem;
-    width: 2rem;
-    position: absolute;
-    top: 1.2rem;
-    right: 0.6rem;
-    cursor: pointer !important;
-    z-index: 4;
+  height: 2rem;
+  width: 2rem;
+  position: absolute;
+  top: 1.2rem;
+  right: 0.6rem;
+  cursor: pointer !important;
+  z-index: 4;
+}
+
+.wishlist-preview-btn {
+  font-size: 0.8rem;
+  padding: 0.4rem 0.8rem;
+  margin: 0 0.2rem;
+  font-weight: 550;
+  flex: 1
+}
+
+
+@media only screen and (max-width: 600px) {
+  .wishlist-preview-btn {
+    font-size: 0.8rem;
+    padding: 0.4rem 0.8rem;
+    margin: 0 0.2rem;
+    font-weight: 550;
+    flex: 1;
+    font-weight: 100;
+
   }
+}
