--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -1,13 +1,18 @@
-
-
 .loader {
-    border: 0.7rem solid var( --white ); /* Light grey */
-    border-top: 0.7rem solid var(--primary); /* Blue */
-    border-radius: 50%;
-    animation: spin 1.5s linear infinite;
+  border: 0.7rem solid var(--white);
+  /* Light grey */
+  border-top: 0.7rem solid var(--primary);
+  /* Blue */
+  border-radius: 50%;
+  animation: spin 1.5s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
   }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+
+  100% {
+    transform: rotate(360deg);
   }
+}
