--- a/src/components/productFilter/productFilter.css
+++ b/src/components/productFilter/productFilter.css
@@ -1,4 +1,3 @@
-
 .productFilter {
   background-color: var(--white);
   margin: 5vh 0vh;
@@ -14,7 +13,7 @@
   position: sticky;
   top: 10vh;
   bottom: 0;
-  padding: 0.5 1rem ;
+  padding: 0.5 1rem;
 
 }
 
@@ -22,20 +21,24 @@
   width: 90%;
   padding: 2% 5%;
 }
-.filter-clear-all{
+
+.filter-clear-all {
   cursor: pointer;
   padding: 0.2 1rem;
-  
+
 }
+
 .fliter-1,
 .fliter-2,
 .fliter-3,
-.filter-4 ,.filter-5{
+.filter-4,
+.filter-5 {
   width: 90%;
   /* background-color: palevioletred; */
   border-top: 1px solid var(--primary);
   margin: 0% 5%;
 }
+
 .fliter-heading {
   display: flex;
   align-items: center;
@@ -54,8 +57,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  margin:0.1rem 0
-  
+  margin: 0.1rem 0
 }
 
 .filter-option {
@@ -64,75 +66,76 @@
   align-items: center;
   justify-content: space-between;
   font-size: 0.95rem;
-  padding:  0rem;
+  padding: 0rem;
 }
 
-.product-filter-toggle-btn{
+.product-filter-toggle-btn {
   display: none;
 }
 
 @media only screen and (max-width: 600px) {
-  .product-filter-toggle-btn{
-   
+  .product-filter-toggle-btn {
+
     display: flex;
     align-items: center;
-    justify-content:flex-end;
+    justify-content: flex-end;
     position: fixed;
-    
-    width:95%;
-    padding:0.5rem  5% 0.5rem 0;
-    bottom:0;
-    left:0;
-    right:0;
-    background-color: var(--background);
-    z-index:10;
-    border-top:1px solid var(--primary)
 
+    width: 95%;
+    padding: 0.5rem 5% 0.5rem 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--background);
+    z-index: 10;
+    border-top: 1px solid var(--primary)
   }
 
-  .productFilter{
+  .productFilter {
     display: none;
     height: 34rem;
-    z-index:100;
+    z-index: 100;
     background-color: var(--white);
     position: fixed;
-    top:-5vh;
-    left:0;
-    right:0;
-    bottom:0;
-    
+    top: -5vh;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
   }
 
   .fliter-heading {
     margin-bottom: 0.1rem;
   }
-  
+
 
   .filter-0 {
     width: 90%;
     padding: 0.5% 5%;
-    margin:0;
+    margin: 0;
   }
+
   .fliter-1,
   .fliter-2,
   .fliter-3,
-  .filter-4 ,.filter-5{
+  .filter-4,
+  .filter-5 {
     padding: 0% 5%;
-    margin:0;
+    margin: 0;
   }
 
-  
 
-  .show{
+
+  .show {
     display: flex;
   }
 
-  .hide{
+  .hide {
     display: none;
   }
 
 
 
-  
-  
+
+
 }
