created a single point of truth for wishlist,cart,logout/login actions

--- a/src/components/wishListButton/wishListButton.css
+++ b/src/components/wishListButton/wishListButton.css
@@ -17,6 +17,12 @@
 }
 
 
+.cartCard-wishlist-btn {
+  font-size: 0.8rem;
+  padding: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 @media only screen and (max-width: 600px) {
   .wishlist-preview-btn {
     font-size: 0.8rem;
