--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -30,6 +30,14 @@
   padding-right: 0.5rem;
 }
 
+
+.close-icon {
+  height: 1.2rem;
+  width: 1.2rem;
+  padding-right: 0.5rem;
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 600px) {
   .search {
     display: none;
