--- a/src/components/productGrid/style.css
+++ b/src/components/productGrid/style.css
@@ -9,6 +9,14 @@
   justify-content: center;
 }
 
+.no-product{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  min-width: 70%;
+  min-height: 100%;
+}
 
 @media only screen and (max-width: 600px) {
   .productGrid {
@@ -19,5 +27,10 @@
     grid-template-rows: auto;
     grid-gap: 1rem;
     justify-content: center;
+  }
+
+  .no-product{
+    min-width: 100%;
+    min-height: 100vh;
   }
 }
